fix: update dark mode bg color

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -57,7 +57,9 @@
 
 [data-theme="dark"] {
   /* Dark mode styles */
-  --ifm-background-color: #131314 !important;
+  --ifm-background-color: #101010 !important;
+  /* --ifm-background-color: #13141A !important; */
+  /* --ifm-background-color: #131314 !important; */
   --ifm-navbar-background-color: #0a0a0a !important;
   --ifm-text-color: #e1e1e6;
   --ifm-heading-color: #e1e1e6;
